kustomization/overlays/prod/homeassistant/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate-svc
spec:
  externalName: loki.hogs.tswn.us
  ports:
    - name: http
      port: 5000
  type: ExternalName
