kustomization/overlays/prod/homeassistant/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: homeassistant-ingress
spec:
  rules:
    - host: esphome.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: esphome-svc
                port:
                  name: web
            path: /
            pathType: Prefix
    - host: homeassistant.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: homeassistant-svc
                port:
                  name: hass-web
            path: /
            pathType: Prefix
    - host: homeassistant-config.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: homeassistant-svc
                port:
                  name: code-web
            path: /
            pathType: Prefix
