kustomization/overlays/prod/homeassistant/ingressroutetcp.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-ingressroutetcp
spec:
  entryPoints:
    - mqtts
  routes:
    - match: HostSNI(`mqtt.hogs.tswn.us`)
      services:
        - name: mosquitto-svc
          port: mqtt
  tls: {}
